# Reverser

./: .gitignore  Cargo.toml  README.md
benchmark/: bench.sh  bench_files.sh
src/: reverse.rs  reverse_file.rs  reverse_folder.rs
tests/: reverse.rs
tests/correctness/: fake_file.txt  small_generated.data  small_generated.data.solution  task_example.data  task_example.data.solution
utils/: gen.py  gen_folders.py
